fixed clipping on nav

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,7 @@ body {
   display: flex;
   justify-content: space-between;
   position: fixed;
+  z-index: 1;
 }
 
 .nav > .nav-header {
